fix: fix swag
